--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ BOT_ACTIVE_END=9
 FAQ_FILE_PATH=./data/faq.json
 AGENT_API_KEY=
 
-CONFIDENCE_THRESHOLD=
+Faq_Confidence_Threshold = 0.5
+
 
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_TEMPERATURE=0.2
