--- a/.env.example
+++ b/.env.example
@@ -8,10 +8,17 @@ BOT_ACTIVE_START=21
 BOT_ACTIVE_END=9
 FAQ_FILE_PATH=./data/faq.json
 AGENT_API_KEY=
-
+CONFIDENCE_THRESHOLD=0.5
 Faq_Confidence_Threshold = 0.5
 
 
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_TEMPERATURE=0.2
 OPENAI_MAX_TOKENS=220
+
+
+OPENAI_DECIDER_TOPK=10
+OPENAI_DECIDER_MAX_FAQS=3
+OPENAI_DECIDER_MIN_CONFIDENCE=0.65
+OPENAI_DECIDER_TEMPERATURE=0.1
+OPENAI_DECIDER_MAX_TOKENS=420
