--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fuse.js": "^7.1.0",
     "openai": "^6.10.0"
   },
   "devDependencies": {
